# skylator

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  FAULT_TOLERANCE_PLAN.md  MODEL_MANAGEMENT_PLAN.md  build_llama.bat  build_llama2.bat  config.yaml.example  dev.bat  dev.sh  pyproject.toml  refactor_plan2.md  requirements.txt  server.py  setup_mac.sh  setup_venv.bat  start_server.bat  start_server.sh  start_server_mac.sh  test_core.py  web_server.py
data/: skyrim_terms.json
deploy/: skylator-master.service
docs/: architecture.md  esp_format.md  llama_cpp_build.md  mcm_format.md  models.md  overview.md  progress.md  python_patches.md  refactor_plan.md  session_2026_03_22.md
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts
remote_worker/: CLAUDE.md  README.md  agent_link.py  config.py  offline_translate.py  remote_server.py  requirements-cuda.txt  requirements-metal.txt  requirements.txt  result_store.py  server.py  server_config.example.yaml  setup.bat  setup.sh  start.sh
remote_worker/deploy/: README.md  com.skylator.agent.plist  install-windows.ps1  skylator-agent.env  skylator-agent.service
remote_worker/models/: base.py  inference_params.py  llamacpp_backend.py  loader.py  mlx_backend.py
remote_worker/prompt/: __init__.py  builder.py
scripts/: __init__.py  esp_engine.py  pex_engine.py  strings_codec.py  translate_mcm.py
tests/: conftest.py  harness_agent.py  test_agent_socket.py  test_api_integration.py  test_assignment_dispatch.py  test_assignment_manager.py  test_auto_feed.py  test_auto_translate.py  test_campaign.py  test_collect.py  test_db_backup.py  test_esp_roundtrip.py  test_f1_fixes.py  test_f2_fixes.py  test_f3_masking.py  test_f4_security.py  test_fuzzy_reuse.py  test_global_dict_sqlite.py  test_handshake.py  test_hash_dispatch_pool.py  test_idempotency.py  test_inference_params.py  test_job_center.py  test_job_manager.py  test_ledger_dualwrite.py  test_localized_apply.py  test_long_horizon.py  test_mod_priority.py  test_model_api.py  test_model_estimator.py  test_model_state.py  test_nat_resend.py  test_nexus_cache_sqlite.py  test_offline_backend.py  test_offline_runner.py  test_pex_engine.py  test_pick_better.py  test_prompt_builder.py  test_prompt_parser.py  test_protocol.py  (+23 more)
tools/: .gitignore
translator/: cli.py  config.py  pipeline.py  protocol.py
translator/context/: builder.py  esp_context.py  nexus_fetcher.py  summarizer.py
translator/data_manager/: string_manager.py  string_merger.py  translation_cache.py  translation_import.py
translator/db/: __init__.py  (+5 more)
(+159 files in other folders)
