[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nolvus-translator"
version = "2.0.0"
description = "Skyrim mod localization engine with multi-model ensemble translation"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.2",
    "click>=8.1.8",
    "requests>=2.32.0",
    "flask>=3.0.0",
]

[project.optional-dependencies]
remote-server = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "zeroconf>=0.132.0",
]

[project.scripts]
nolvus-translate = "translator.cli:cli"
skylator-server  = "server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["translator*", "scripts*"]
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
